--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.nav-bar {
+    position: fixed;
+    width: 100%;
+}
+
+.nav-bar img {
+    width: 10px;
+    height: 10px;
+}
+
+.left-side {
+
+}
