--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     z-index: 300;
     top: 0;
     left: 0;
-    border-bottom: none;
+    border-bottom: 1px solid #e2e2e2
 }
 
 .head-container {
@@ -19,17 +19,64 @@
     border: 1px solid #e2e2e2;
 }
 
+.nav-bar {
+    width: 100%;
+}
 .nav-bar div{
     float: left;
-    width: 29%;
 }
 
+.left-side {
+    width: 25%;
+}
+
+.img-container {
+    width: 35%;
+    margin: 5px;
+}
 .nav-bar img {
-    width: 10px;
-    height: 10px;
+    width: 16px;
+    height: 16px;
+    margin: 5px;
+}
+
+.nyc-logo {
+    width: 57%;
+    text-align: center;
 }
 
 .nyc-logo img {
-    width: 100px;
-    height: 50px;
+    width: 217px;
+    height: 30px;
+}
+
+.SC {
+    font-size: 14.25px;
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.7px;
+    line-height: 19px;
+    margin-top: 12px;
+}
+  
+.right-side {
+    margin: 5px;
+}
+
+.right-side button {
+    float: right;
+    margin: 10px;
+    
+}
+
+.btn {
+    background-color:#567b95;
+    color: #fff;
+    font-size: 11px;
+    line-height: 11px;
+    font-weight: 700;
+    white-space: nowrap;
+    vertical-align: middle;
+    padding: 11px 12px 8px;
 }
