--- a/style.css
+++ b/style.css
@@ -279,48 +279,48 @@
 
 .col-1 {
     position: absolute;
-    top: 88.2%;
+    top: 26.2%;
 }
 
 .col-2 {
     position: absolute;
-    top: 88.2%;
-    left: 33%;
+    top: 26.2%;
+    left: 25%;
 }
 
 .col-3 {
     position: absolute;
-    top: 88.2%;
+    top: 26.2%;
     left: 51%;
 }
 
 .col-4 {
     position: absolute;
-    top: 88.2%;
-    left: 69%;
+    top: 26.2%;
+    left: 77%;
 }
 
 .col-5 {
     position: absolute;
-    top: 95.2%;
+    top: 72.2%;
 }
 
 .col-6 {
     position: absolute;
-    top: 95.2%;
-    left: 33%;
+    top: 72.2%;
+    left: 25%;
 }
 
 .col-7 {
     position: absolute;
-    top: 95.2%;
+    top: 72.2%;
     left: 51%;
 }
 
 .col-8 {
     position: absolute;
-    top: 95.2%;
-    left: 69%;
+    top: 72.2%;
+    left: 77%;
 }
 
 .bold {
@@ -329,6 +329,56 @@
     font-weight: 800;
 }
 
-.inflation {
-    border-bottom: 1px solid #666;
+.inflation { 
+    position: relative;
+}
+
+.video-container {
+    width:44%;
+    height:320px;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+}
+
+.figcapt {
+    width: 44%;
+}
+
+.video-caption {
+    width: 100%;
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
+    color:#666;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+}
+
+.telescope-img {
+    width: 44%;
+}
+
+.telescope-img img {
+    width: 100%;
+}
+
+.image-capt {
+    width: 44%;
+}
+
+.cap1 {
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
+    color:#666;
+    font-family: nyt-imperial,georgia,'times new roman',times,serif;
+}
+
+.cap2 {
+    font-size: 0.8125rem;
+    color:rgb(136, 136, 136);
+    font-family: nyt-imperial, georgia, "times new roman", times, serif;
+    line-height: 1.125rem;
+    letter-spacing: 0.01em;
+}
 }
