--- a/style.css
+++ b/style.css
@@ -381,4 +381,68 @@
     line-height: 1.125rem;
     letter-spacing: 0.01em;
 }
+
+.article-footer {
+    width: 44%;
+}
+
+.text {
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    color:rgb(102, 102, 102);
+}
+
+.main-container .comments{
+    margin-top: 15px;
+}
+
+.comments {
+    width: 44%;
+    overflow: hidden;
+}
+
+.read-button {
+    float: left;
+    width: 50%;
+}
+
+.read-btn {
+    background-color:rgb(86, 123, 149);
+    border: 1px solidrgb(50, 104, 145);
+    border-radius: 3px;
+    color:white;
+    display: block;
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    font-size: 0.8125rem;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    line-height: 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px 0px;
+    text-transform: uppercase;
+    transition: background-color 0.6s ease 0s;
+    width: 100%;
+}
+
+.icons-below {
+    list-style: none;
+    float: right;
+}
+.icons-below-box {
+    float: left;
+}
+
+.list_icon_below_box li {
+    list-style: none;
+    float: left;
+    background: #e6e6e6;
+    border-radius: 50%;
+    margin-right: 13px;
+    padding: 6px 8px 4px;
+}
+
+.list_icon_below_box img {
+    width: 12px;
 }
