--- a/style.css
+++ b/style.css
@@ -575,3 +575,149 @@
     font-weight: 500;
     text-decoration-line: none;
 }
+
+.main-container .section-3 {
+    width: 91%;
+    margin: 0 auto;
+    border-top:5px double #dad6d6;
+    border-bottom: 1px solid #dad6d6;
+    padding-bottom: 10px;
+}
+
+.bottom-header {
+    width: 100%;
+    padding: 10px 0;
+    overflow: hidden;
+}
+
+.bottom-logo {
+    float: left;
+}
+
+.bottom-logo img {
+    width: 205px;
+    height: 31px;
+}
+
+.go-to {
+    float: right;
+}
+
+.go-to-link {
+    color:#567b95;
+    font-family: nyt-franklin;
+    font-size: 11px;
+    font-syle: normal;
+    font-weight: 400;
+    line-height: 11px;
+    text-decoration: none;
+}
+
+.main-container .sections {
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.small-section {
+    float: left;
+    width: 16.666%;
+}
+
+.section-head {
+    color:rgb(51, 51, 51);
+    font-size: 13px;
+    font-weight: 700;
+    font-family: nyt-franklin;
+    height: 25px;
+    line-height: 15px;
+    margin: 0px;
+    text-transform: uppercase;
+    width: 150px;
+    padding: 5px 0;
+}
+
+.small-section ul {
+    list-style: none;
+}
+
+.small-section:nth-child(6) {
+    border-left: 1px solid #dad6d6;
+    padding-left: 13px;
+}
+
+.the-links li a {
+    color:rgb(0, 0, 0);
+    display: inline-block;
+    font-family: nyt-franklin;
+    text-decoration: none;
+    text-transform: capitalize;
+    width: 150px;
+    font-size: 14px;
+    font-weight: 500;
+    height: 23px;
+    line-height: 16px;
+    padding: 14px 0;
+}
+
+.the-links .bold a {
+    color:rgb(0, 0, 0);
+    display: inline-block;
+    font-family: nyt-franklin;
+    text-decoration: none;
+    text-transform: capitalize;
+    width: 150px;
+    font-size: 14px;
+    font-weight: 700;
+    height: 25px;
+    line-height: 15px;
+    padding-bottom: 0px;
+}
+
+.the-links .small a {
+    color:rgb(0, 0, 0);
+    display: inline-block;
+    font-family: nyt-franklin;
+    text-decoration: none;
+    text-transform: capitalize;
+    width: 150px;
+    font-size: 12px;
+    font-weight: 500;
+    height: 23px;
+    line-height: 21px;
+}
+ 
+.main-container .small-div {
+    border-top: 1px solid #dad6d6;
+    width: 100%;
+    margin: 15px 0;
+    padding-bottom: 5px;
+}
+
+.the-links li a:hover {
+    text-decoration: underline;
+}
+
+.footer-container {
+    width: 91%;
+    margin: 0 auto;
+    position: relative;
+    top: 45px;
+    padding-bottom: 20px;
+}
+
+.footer-list {
+   text-align: center;
+   
+}
+
+.footer-list li {
+    display: inline;
+    font-size: 13px;
+   
+}
+
+.footer-list a {
+     text-decoration: none;
+     color: #333;
+}
