--- a/style.css
+++ b/style.css
@@ -718,6 +718,7 @@
 
 .footer-list li {
     display: inline;
+    margin-right: 15px;
     font-size: 13px;
    
 }
@@ -728,5 +729,16 @@
 }
 
 .bottom-nav {
+    position: relative;
+    width: 100%;
+    height: 65px;
+    border-top: 1px solid #000;
+    margin-top: 48px;
+}
+
+.inner-tush {
     position: fixed;
+    height: 65px;
+    bottom: 0;
+    left: 0;
 }
