--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@
 
 .footer-container {
     width: 91%;
-    margin: 0 auto;
+    margin: 0 auto 30px;
     position: relative;
     top: 43px;
     padding-bottom: 20px;
@@ -729,16 +729,29 @@
 }
 
 .bottom-nav {
-    position: relative;
+    position: fixed;
+    bottom: 0;
     width: 100%;
-    height: 65px;
+    height: 35px;
     border-top: 1px solid #000;
-    margin-top: 48px;
+    padding: 10px 0;
 }
 
 .inner-tush {
-    position: fixed;
-    height: 65px;
-    bottom: 0;
-    left: 0;
+    width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.pa {
+    float: left;
+}
+
+.exp {
+    float: right;
+}
+
+.exp img {
+    width: 15px;
+    height: 15px;
 }
