--- a/style.css
+++ b/style.css
@@ -440,10 +440,14 @@
     width: 100%;
 }
 
-.icons-below {
-    list-style: none;
+.icons-below  {
     float: right;
 }
+
+.icons-below ul {
+    list-style: none;
+}
+
 .icons-below-box {
     float: left;
 }
@@ -506,7 +510,7 @@
     width: 280px;
 }
 
-.sect-two-fig figcaption {
+.sect-two-fig p {
     font-size: 10px;
     color: #999999;
     text-align: right;
@@ -654,7 +658,7 @@
     text-decoration: none;
     text-transform: capitalize;
     width: 150px;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 500;
     height: 23px;
     line-height: 16px;
@@ -705,7 +709,7 @@
 
 .footer-container {
     width: 91%;
-    margin: 0 auto 30px;
+    margin: 5px auto 54px;
     position: relative;
     top: 43px;
     padding-bottom: 20px;
@@ -732,23 +736,29 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 35px;
+    height: 54px;
     border-top: 1px solid #000;
     padding: 10px 0;
+    background: #fdfdfd;
+    z-index: 300;
 }
 
 .inner-tush {
     width: 80%;
     margin: 0 auto;
     overflow: hidden;
+    padding: 8px;
 }
 
 .pa {
-    float: left;
+    text-align: center;
+    display: inline-block;
+    width: 94%
 }
 
 .exp {
-    float: right;
+    display: inline-block;
+    text-align: right;
 }
 
 .exp img {
