--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     z-index: 390;
     top: 0;
     left: 0;
-    box-shadow: 0px 2px 1px -2px #e2e2e2;
+    box-shadow: 0 2px 1px -2px #e2e2e2;
 }
 
 .head-container {
@@ -124,7 +124,7 @@
 }
 
 .main-container div {
-    font-family: nyt-cheltenham, georgia,'times new roman', times, serif;
+    font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
     margin: 0 auto;
 }
 
@@ -255,7 +255,7 @@
 
 /* start of theory box design */
 .image-container .theory-box {
-    font-family: nyt-cheltenham, georgia,'times new roman', times, serif;
+    font-family: nyt-cheltenham,georgia,'times new roman',times,serif;
     margin-bottom: 15px;
 }
 
@@ -343,7 +343,7 @@
 }
 
 .image-container .figure-text {
-    margin-top: 15px;;
+    margin-top: 15px;
     font-weight: 500;
     font-style: normal;
     font-family: arial,helvetica,sans-serif;
@@ -437,7 +437,7 @@
     line-height: 1.5rem;
     margin-left: auto;
     margin-right: auto;
-    padding: 5px 0px;
+    padding: 5px 0;
     text-transform: uppercase;
     transition: background-color 0.6s ease 0s;
     width: 100%;
@@ -475,7 +475,7 @@
     overflow: hidden;
 }
 
-.main-col-box, .right-col-box {
+.main-col-box .right-col-box {
     border-top: 1px solid #000;
 }
 
@@ -484,7 +484,7 @@
     float: left;
 }
 
-.inner-box > *, .right-inner-box > * {
+.inner-box > * .right-inner-box > * {
     padding-top: 12px;
 }
 
@@ -586,7 +586,7 @@
 .main-container .section-3 {
     width: 91%;
     margin: 0 auto;
-    border-top:5px double #dad6d6;
+    border-top: 5px double #dad6d6;
     border-bottom: 1px solid #dad6d6;
     padding-bottom: 10px;
 }
@@ -612,7 +612,7 @@
 }
 
 .go-to-link {
-    color:#567b95;
+    color: #567b95;
     font-family: nyt-franklin;
     font-size: 11px;
     font-style: normal;
@@ -633,13 +633,13 @@
 }
 
 .section-head {
-    color:rgb(51, 51, 51);
+    color: rgb(51, 51, 51);
     font-size: 13px;
     font-weight: 700;
     font-family: nyt-franklin;
     height: 25px;
     line-height: 15px;
-    margin: 0px;
+    margin: 0;
     text-transform: uppercase;
     width: 150px;
     padding: 5px 0;
@@ -654,8 +654,13 @@
     padding-left: 13px;
 }
 
+.footer-list a {
+    text-decoration: none;
+    color: #a5a5a5;
+}
+
 .the-links li a {
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     display: inline-block;
     font-family: nyt-franklin;
     text-decoration: none;
@@ -669,7 +674,7 @@
 }
 
 .the-links .bold a {
-    color:#000;
+    color: #000;
     display: inline-block;
     font-family: nyt-franklin;
     text-decoration: none;
@@ -679,11 +684,10 @@
     font-weight: 700;
     height: 25px;
     line-height: 15px;
-    padding-bottom: 0px;
 }
 
 .the-links .small a {
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     display: inline-block;
     font-family: nyt-franklin;
     text-decoration: none;
@@ -694,7 +698,7 @@
     height: 23px;
     line-height: 21px;
 }
- 
+
 .main-container .small-div {
     border-top: 1px solid #dad6d6;
     width: 100%;
@@ -719,18 +723,13 @@
 }
 
 .footer-list {
-   text-align: center; 
+    text-align: center; 
 }
 
 .footer-list li {
     display: inline;
     margin-right: 15px;
-    font-size: 13px;  
-}
-
-.footer-list a {
-     text-decoration: none;
-     color: #a5a5a5;
+    font-size: 13px;
 }
 
 .bottom-nav {
@@ -755,7 +754,7 @@
     text-align: center;
     display: inline-block;
     width: 90%;
-    font-size:20px;
+    font-size: 20px;
 }
 
 .exp {
